Update microservice
